--- a/signin.html
+++ b/signin.html
@@ -16,6 +16,6 @@
             <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
         </form>
 
-        <script type="module" src="sign.js"></script>
+        <script type="module" src="signin.js"></script>
 </body>
 </html>
